@@ -286,7 +286,7 @@ namespace sharpnldap
 				LdapEntry le = ldapConn.Read(x);
 				Logger.Debug("LDAP Entry Read {0}", le.getAttribute("cn").StringValue);
 				Logger.Debug("LDAP Entry Read Attribute count {0}", le.getAttributeSet().Count); 
-				members = AttributeUtil.getListofAttr(le.getAttributeSet(), "member");
+				members = AttributeUtil.getListofAttr(le.getAttributeSet(), ATTRNAME.MEMBER);
 			}
 			return members;
 		}						
