@@ -1,0 +1,4 @@
+2010-07-01  Jared L Jennings  <jaredljennings@gmail.com>
+
+	* AttributeUtil.cs: 
+
